fixed footer på store skærme. About us page også fixed på store skærme. Fixed footer gap på flere sider. ændret bg-image til horizontalt billede

--- a/PhotographyBusiness/PhotographyBusiness/wwwroot/css/site.css
+++ b/PhotographyBusiness/PhotographyBusiness/wwwroot/css/site.css
@@ -77,3 +77,10 @@ html {
     margin-left: calc(var(--bs-gutter-x) * -.5) !important;
     justify-content: space-around !important;
 }
+
+.footer {
+/*    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 100%;*/
+}
